# dbt-decodable

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  tox.ini
.github/license-check/: license-config.json  license-header.py  license-header.sql
.github/plugin-discovery/: plugin_discovery.py
.github/workflows/: main.yml
dbt/: __init__.py
dbt/adapters/decodable/: __init__.py  __version__.py  connections.py  handler.py  impl.py  relation.py
dbt/include/decodable/: __init__.py  dbt_project.yml  profile_template.yml
dbt/include/decodable/macros/: adapters.sql  operations.sql
dbt/include/decodable/macros/materializations/seed/: helpers.sql  seed.sql
dbt/include/decodable/macros/materializations/table/: create_table_as.sql  table.sql
dbt/include/decodable/macros/materializations/test/: get_test_sql.sql  test.sql  test_as_table.sql
dbt/include/decodable/macros/materializations/unsupported/: incremental.sql  view.sql
decodable/client/: api.py  client.py  client_factory.py  schema.py  types.py
decodable/config/: client_config.py  profile.py  profile_reader.py
example_project/example/: README.md  dbt_project.yml
example_project/example/models/example/: events_count.sql  http_events.sql  http_events_bytes_sent.sql  schema.yml  test.sql
tests/: conftest.py
tests/functional/adapter/simple/: fixtures.py  test_simple_project.py
tests/unit/decodable/: __init__.py
tests/unit/decodable/client/: test_schema.py  test_types.py
tests/unit/decodable/config/: test_profile.yml  test_profile_reader.py
